kubernetes-gitops-security/kyverno-policies/resource-bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  labels:
    app: demo
spec:
  containers:
    - name: app
      image: nginx:latest
