kubernetes-gitops-security/kyverno-policies/resource-good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  labels:
    app.kubernetes.io/name: demo
spec:
  containers:
    - name: app
      image: nginx:1.25
